syntax = "proto3";

import "scalapb/scalapb.proto";
import "google/protobuf/wrappers.proto";

import "thread_context.proto";
import "protocol_instances.proto";
import "relationship.proto";
import "config_value.proto";
import "msg_and_delivery.proto";
import "connection_status.proto";
import "did_pair.proto";

package com.evernym.verity.actor.agent.user;

message UserAgentPairwiseState {
    option (scalapb.message).extends = "com.evernym.verity.actor.agent.user.UserAgentPairwiseStateImpl";
    google.protobuf.StringValue mySelfRelDID = 1;
    DidPair ownerAgentDidPair = 2;
    ConnectionStatus connectionStatus = 3;
    map<string, ConfigValue> configs = 4;
    MsgAndDelivery msgAndDelivery = 5;
    google.protobuf.StringValue thisAgentKeyId = 6;
    DidPair agencyDIDPair = 7;
    google.protobuf.StringValue agentWalletId = 8;
    ThreadContext threadContext = 9;
    DidPair publicIdentity = 10;
    //once we stop using agent-provisioning:0.5 and connecting:0.6 protocol
    //the below mentioned 'protoInstances' will no longer be required.
    ProtocolRunningInstances protoInstances = 11;
    relationship.Relationship relationship = 12;
}

